--- a/css/img.css
+++ b/css/img.css
@@ -43,6 +43,11 @@ h3{
     margin: 10px;
     overflow: hidden;
     border: 1px solid;
+    cursor: pointer;
+}
+.gallery_div:hover{
+	transform: scale(1.1);
+	transition-duration: .5s;
 }
 
 .gallery_div .p_comment{
@@ -51,9 +56,28 @@ h3{
 	font-size: .8rem;
 }
 
-img{
+.thumbnail{
     height: calc(300px / 2);
     width: 250px;
     object-fit: cover;
     object-position: left;
 }
+
+.img_regi_button_div, .pageCount_div{
+	text-align: center;
+	padding: 30px;	
+}
+
+.img_detail_content_div{
+	text-align: center;
+	margin-bottom: 50px;
+}
+
+.img_detail_img{
+    max-width: 80%;
+}
+
+/* .img_detail_img:hover{
+	transform: scale(1.2);
+	transition : .5s;
+} */
