--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,9 @@ header {
 	min-width: 30%;
 	height: 200px;
 	position: relative; /*top과left로 위치잡기*/
+	cursor: pointer;
+	background: url("../image/sky.jpg");
+	background-size: cover;
 }
 
 nav {
@@ -22,30 +25,32 @@ nav {
 ul{
 	display: flex;
     list-style: none;
-    justify-content: space-evenly;
     margin: 0px;
     height: inherit;
     align-items: center;
 }
 
 .main_link_github {
-	height: 35px;
-    background: burlywood;
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    height: 35px;
     cursor: pointer;
     line-height: 30px;
+    align-items: end;
 }
+.main_link_github a, 
+.main_link_github ul li:last-child::after{
+	color: #fff;
+}
+
 
 a {
 	text-decoration: none;
 }
-nav > ul li  {
-	padding: 7px;
-    border: 1px 1px 0 1px;
-    border-left: 1px solid;
-    border-top: 1px solid;
-    border-right: 1px solid;
-	border-color: #314CE0;
-    border-radius: 30% 5%;
+ul li ::before , 
+ul li:last-child::after {
+	content: "│";
 }
 
 .section1 .section2 .section3{
@@ -63,5 +68,6 @@ footer{
 	bottom:0px;
 	width:100%;
 	height: 70px;
-	background: #04C5FA;
+	background: #4f8ed3;
+	margin-top: 60px;
 }
